Modal HTML created

--- a/index.html
+++ b/index.html
@@ -16,8 +16,27 @@
 <body>
     <div id="app">
 
-        <section class="modal">
-            {{produto}}
+        <section class="modal" v-if="produto">
+            <div class="modal_container">
+                <div class="modal_img">
+                    <img  :src="produto.img">
+                </div>
+                <div class="modal_info">
+                    <span class="modal_preco">{{produto.preco | numPreco}}</span>
+                    <h2 class="modal_titulo">{{produto.nome}}</h2>
+                    <p>{{produto.descricao}}</p>
+                    <button class="modal_btn">Adicionar ao carrinho</button>
+                </div>
+                <div class="avaliacoes">
+                    <h2 class="avalicoes_titulo">Avaliações:</h2>
+                    <ul>
+                        <li v-for="avaliacao in produto.avaliacoes">
+                            <p>{{avaliacao.nome}} | {{avaliacao.estrelas}} estrelas</p>
+                            <p class="avaliacao_descricao">{{avaliacao.descricao}}</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
         </section>
        <section class="produtos">
