Message basic structure

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         </div>
     </section>
 
+    <div class="alerta">
+        <p class="alerta_mensagem">{{mensagemAlerta}}</p>
+    </div>
+
     </div>
 
     <script src="app.js"></script>
