Showing message when adding to cart

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-    <div class="alerta">
+    <div class="alerta" :class="{ativo : alertaAtivo}">
         <p class="alerta_mensagem">{{mensagemAlerta}}</p>
     </div>
 
